Fix display of images on mobile in carroussels
Fix display of images on mobile in carroussels

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -28,3 +28,9 @@
 .carousel-item > img {
     height:auto;
 }
+
+@media (max-width:700px)  {
+    .carousel-item > img {
+        width:100%;
+    }
+}
